--- a/app/views/account_actions_mailer/create_an_account_email.html.erb
+++ b/app/views/account_actions_mailer/create_an_account_email.html.erb
@@ -10,10 +10,10 @@
     <h1 style="text-align: center">Create a TOCA Cares Account</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear Employee,
+      Dear Teammate,
     </p>
     <p>
-      TOCA Cares is a community fund sustained by the tax-deductible contributions voluntarily made by TOCA employees and shareholders.  It's a way TOCA takes care of our own, and can help employees get out of an unexpected financial jam, keep learning or educating themselves, or even participate in charity work of their own.
+      TOCA Cares is a community fund sustained by the tax-deductible contributions voluntarily made by TOCA teammates and shareholders.  It's a way TOCA takes care of our own, and can help teammates get out of an unexpected financial jam, keep learning or educating themselves, or even participate in charity work of their own.
     </p>
     <p>
       You have been invited to <%= link_to "create an account", new_user_registration_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> using this email address to set up your account.  Please create your account as soon as you can, as there may be time-sensitive things waiting for you.
