--- a/app/views/app_forms/_form.html.erb
+++ b/app/views/app_forms/_form.html.erb
@@ -141,7 +141,7 @@
 
     <section id="for-other-hardship" class="z-depth-1 p-5 my-5 hardship-only">
       <h2 class="toca-uppercase text-center">Information for Recipient</h2>
-      <p class="text-center"><small>Fill out this section if you are applying on the behalf of another TOCA employee.</small></p>
+      <p class="text-center"><small>Fill out this section if you are applying on the behalf of another TOCA teammate.</small></p>
 
       <div class="row">
         <div class="field form-check text-left for_other">
@@ -344,7 +344,7 @@
       <h2 class="toca-uppercase text-center">Signatures</h2>
       <h5 class="mb-0 toca-uppercase">Statement of Intent</h5>
       <small>
-        I agree that all of the information provided in this application is truthful and reflects a genuine financial hardship. In no way am I attempting to take advantage of TOCA Cares, nor my fellow employees, as this is a community fund. If it appears that I have, serious actions will be taken, jeopardizing my job at TOCA and future access to the community fund.
+        I agree that all of the information provided in this application is truthful and reflects a genuine financial hardship. In no way am I attempting to take advantage of TOCA Cares, nor my fellow teammates, as this is a community fund. If it appears that I have, serious actions will be taken, jeopardizing my job at TOCA and future access to the community fund.
       </small>
 
       <div class="row">
