--- a/app/views/application_change_mailer/funding_completed_email.html.erb
+++ b/app/views/application_change_mailer/funding_completed_email.html.erb
@@ -13,10 +13,10 @@
       Dear <%= @application.full_name %>,
     </p>
     <p>
-      TOCA Cares is so glad it could assist you! This program was designed for the sole purpose of serving employees like you.
+      TOCA Cares is so glad it could assist you! This program was designed for the sole purpose of serving teammates like you.
     </p>
     <p>
-      We hope you <%= link_to "submit an anonymous testimonial", home_testimonials_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> to TOCA Cares so employees and shareholders can see the impact that their contributions are having on the lives of fellow employees. We hope you will continue to make use of TOCA Cares, should you face another need or want to give back.
+      We hope you <%= link_to "submit an anonymous testimonial", home_testimonials_url, style: "color: #EB0029; font-weight: 700; text-decoration: none" %> to TOCA Cares so teammates and shareholders can see the impact that their contributions are having on the lives of fellow teammates. We hope you will continue to make use of TOCA Cares, should you face another need or want to give back.
     </p>
     <p>
       Thanks for being part of the TOCA family!
