--- a/app/views/charity_mailer/charity_accepted_email.html.erb
+++ b/app/views/charity_mailer/charity_accepted_email.html.erb
@@ -31,7 +31,7 @@
     <% end %>
 
     <p>
-      You will soon be contacted by our partnering organization, Helping Hands, who will reach out to you and request additional information pertaining to the charity and bill. Once verified, Helping Hands will pay the agreed amount of your bill directly in a confidential and secure process. Please keep in mind that your response time to Helping Hands’ inquiries will determine the speed of the process. TOCA Cares is glad we can assist valued employees like you.
+      You will soon be contacted by our partnering organization, Helping Hands, who will reach out to you and request additional information pertaining to the charity and bill. Once verified, Helping Hands will pay the agreed amount of your bill directly in a confidential and secure process. Please keep in mind that your response time to Helping Hands’ inquiries will determine the speed of the process. TOCA Cares is glad we can assist valued teammates like you.
     </p>
     <p>
       Sincerely,
