--- a/app/views/hardship_mailer/by_other_hardship_modified_email.html.erb
+++ b/app/views/hardship_mailer/by_other_hardship_modified_email.html.erb
@@ -13,7 +13,7 @@
       Dear <%= @application.full_name %>,
     </p>
     <p>
-      As you may or may not be aware, another employee has submitted a TOCA Cares hardship application on your behalf. We are delighted to be working with you, as TOCA Cares is about assisting valuable employees like you. After reviewing the application, it has been decided that we think you can help us with adjusting one or more details of the application. We recognize your genuine need, and we request you resubmit the application with the suggested changes in mind.
+      As you may or may not be aware, another teammate has submitted a TOCA Cares hardship application on your behalf. We are delighted to be working with you, as TOCA Cares is about assisting valuable teammates like you. After reviewing the application, it has been decided that we think you can help us with adjusting one or more details of the application. We recognize your genuine need, and we request you resubmit the application with the suggested changes in mind.
     </p>
     <% vote = Vote.where(application_type: "AppForm", application_id: @application.id, seconded: true).first %>
     <p>
@@ -26,7 +26,7 @@
       </ul>
     </p>
     <p>
-      We hope you take advantage of this opportunity, and we look forward to assisting a valuable employee like you.
+      We hope you take advantage of this opportunity, and we look forward to assisting a valuable teammate like you.
       To modify your application <%= link_to "click here", hardship_url(@application), style: "color: #EB0029; font-weight: 700; text-decoration: none" %>. If you feel there has been a mistake, or you have a need to contact someone at TOCA Cares, please <a href="mailto:support@tocacares.com" style="color: #EB0029; font-weight: 700; text-decoration: none">click here</a>. TOCA is glad you’re part of the family, and we hope you accept our humble offer to help through our completely confidential process.
     </p>
     <p>
