--- a/app/views/hardship_mailer/for_other_hardship_accepted_email.html.erb
+++ b/app/views/hardship_mailer/for_other_hardship_accepted_email.html.erb
@@ -10,13 +10,13 @@
     <h1 style="text-align: center">The TOCA Cares Hardship Application You Submitted for <%= @application.full_name %> Has Been Accepted</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear Employee,
+      Dear Teammate,
     </p>
     <p>
       We are delighted to inform you that the hardship application you submitted to TOCA Cares on the behalf of <%= @application.full_name %> has been approved!
     </p>
     <p>
-      The application will now be transferred to <%= @application.full_name %>, who will be contacted by our partnering organization, Helping Hands, who will reach out to them and request additional information about their financial situation to verify they receive the appropriate amount from TOCA Cares. Once verified, Helping Hands will pay the bill directly in a confidential and secure process. Thank you for taking notice of your coworker's situation!  TOCA Cares is glad we can help our valued employees.
+      The application will now be transferred to <%= @application.full_name %>, who will be contacted by our partnering organization, Helping Hands, who will reach out to them and request additional information about their financial situation to verify they receive the appropriate amount from TOCA Cares. Once verified, Helping Hands will pay the bill directly in a confidential and secure process. Thank you for taking notice of your coworker's situation!  TOCA Cares is glad we can help our valued teammates.
     </p>
     <p>
       Sincerely,
