--- a/app/views/hardship_mailer/for_other_hardship_modified_email.html.erb
+++ b/app/views/hardship_mailer/for_other_hardship_modified_email.html.erb
@@ -10,13 +10,13 @@
     <h1 style="text-align: center">The TOCA Cares Hardship Application You Submitted for <%= @application.full_name %> Needs Modifications</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear Employee,
+      Dear Teammate,
     </p>
     <p>
       Thank you for the application you submitted on the behalf of <%= @application.full_name %>. After careful consideration, it has been decided that one or more details of tje application need adjustment. We recognize the genuine need and we will communicate directly with <%= @application.full_name %> so they can reapply with the suggested changes in mind.
     </p>
     <p>
-      We hope you take advantage of this opportunity, and we look forward to assisting our valuable employees.
+      We hope you take advantage of this opportunity, and we look forward to assisting our valuable teammates.
     </p>
     <p>
       Sincerely,
