--- a/app/views/hardship_mailer/hardship_modification_request_email.html.erb
+++ b/app/views/hardship_mailer/hardship_modification_request_email.html.erb
@@ -34,7 +34,7 @@
       </ul>
     </p>
     <p>
-      We hope you take advantage of this opportunity and we look forward to assisting a valuable employee like you.
+      We hope you take advantage of this opportunity and we look forward to assisting a valuable teammate like you.
     </p>
     <p>
       Sincerely,
