--- a/app/views/hardships/show.html.erb
+++ b/app/views/hardships/show.html.erb
@@ -5,7 +5,7 @@
 
     <p class="text-center">
       <% if @hardship.for_other %>
-        <strong>This application was submitted by another TOCA employee on behalf of the applicant.</strong><br>
+        <strong>This application was submitted by another TOCA teammate on behalf of the applicant.</strong><br>
       <% end %>
 
       <%= @hardship.status %>
@@ -87,7 +87,7 @@
       <% end %>
 
 
-      <h3 class="color-toca-red toca-uppercase">Funding Details</h3>
+      <h3 class="color-toca-navy toca-uppercase">Funding Details</h3>
       <p><strong>Requested Amount:</strong>
         <%= number_to_currency(@hardship.requested_amount, unit: "$") %>
         <br>
@@ -100,7 +100,7 @@
 
 
 
-      <h3 class="color-toca-red toca-uppercase">Hardship Description</h3>
+      <h3 class="color-toca-navy toca-uppercase">Hardship Description</h3>
       <p>
         <% category_array = [] %>
 
@@ -138,7 +138,7 @@
 
 
       <% if @seconded_vote && @seconded_vote.modifications_accepted_by_applicant %>
-        <h3 class="color-toca-red toca-uppercase">Modifications (Agreed to by Applicant):</h3>
+        <h3 class="color-toca-navy toca-uppercase">Modifications (Agreed to by Applicant):</h3>
         <p><strong><%= @seconded_vote.modification %></strong></p>
         <% if @seconded_vote.suggest_loan %><p><strong>Loan Suggested:  </strong><%= @seconded_vote.describe_loan %><% end %>
       <% end %>
@@ -191,7 +191,7 @@
     <div class="container py-3">
 
       <!-- NEW MESSAGES -->
-      <h3 class="toca-uppercase color-toca-red mb-0">Send a New Message</h3>
+      <h3 class="toca-uppercase color-toca-navy mb-0">Send a New Message</h3>
       <% if current_user && ( current_user.admin || current_user.committee ) %>
         <p>If you have a question about this application, you can send the applicant a message here.</p>
       <% else %>
@@ -201,7 +201,7 @@
 
       <!-- EXISTING MESSAGES  -->
       <% if @messages.count > 0 %>
-        <h3 class="toca-uppercase color-toca-red mb-0">Existing Messages</h3>
+        <h3 class="toca-uppercase color-toca-navy mb-0">Existing Messages</h3>
         <p class="mb-2"><small>Click a message to see the conversation thread.</small></p>
         <ul>
           <% @messages.each do |message| %>
@@ -230,7 +230,7 @@
 
       <div class="container py-3">
         <% if @votes.count > 0 %>
-          <h3 class="toca-uppercase color-toca-red">Existing Votes</h3>
+          <h3 class="toca-uppercase color-toca-navy">Existing Votes</h3>
           <p class="color-dark-grey"><em>
             Seconding a proposed vote will remove this application from consideration and send it back to the applicant for revision.
           </em></p>
