--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,9 @@
 <!--Main Navigation-->
 <header>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light-grey">
+  <nav class="navbar navbar-expand-lg">
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "TOCA_CARES_LOGO_FNL.png", style: "height: 30px", alt: "TOCA Cares Logo" %>
+      <%= image_tag "TOCA_CARES_LOGO_FNL7.png", style: "height: 30px", alt: "TOCA Cares Logo" %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
