--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -9,7 +9,7 @@
       </h3>
 
       <a href="#process-map" class="text-center mb-5">
-        <p class="h5 color-toca-red bold">See the Application Process</p>
+        <p class="h5 color-toca-navy bold">See the Application Process</p>
       </a>
 
     </section> <!-- mission description -->
@@ -34,12 +34,12 @@
 
           <p class="dark-grey-text text-left">
             <strong class="toca-uppercase bold">Grants</strong><br>
-            TOCA Cares may be able to quickly pay up to $1,000 to prevent you from going under.
+            TOCA Cares may be able to quickly pay up to $2,500 to prevent you from going under.
           </p>
 
           <p class="dark-grey-text text-left">
             <strong class="toca-uppercase bold">Need</strong><br>
-            You must prove you can't handle this unexpected expense (such as a health bill, cell phone replacement, or need to attend a funeral).
+            This is for an unexpected hardship. You must prove you can't handle this unexpected expense (such as a health bill, car repair, property damage).
           </p>
 
           <%= link_to "Apply Now", new_app_form_path, class: "btn btn-primary btn-lg" %>
@@ -66,12 +66,12 @@
 
           <p class="dark-grey-text text-left">
             <strong class="toca-uppercase bold">Classes</strong><br>
-            TOCA Cares will pay 80% of the cost (up to $500 per year) in the cost of a class you think will expand your mind.  It could be a class in coding, nutrition, or CPR.
+           TOCA Cares will pay 75% of the cost (up to $1000 per year) in the cost of a class you think will help you grow at TOCA. It could be a coaching license or an excel class. What would help you succeed in your position?
           </p>
 
           <p class="dark-grey-text text-left">
             <strong class="toca-uppercase bold">College</strong><br>
-            TOCA Cares believes in the value of a college education.  We will provide 80% of your tuition (up to $1,250 per year for employees after 6 months of employment and $2,500 per year after 2 years of employment).
+            TOCA Cares believes in the value of a college education. We will provide 75% (up to $1000 per year) toward your tuition.
           </p>
 
           <%= link_to "Apply Now", new_app_form_path, class: "btn btn-primary btn-lg" %>
@@ -98,7 +98,7 @@
 
           <p class="dark-grey-text text-left">
             <strong class="toca-uppercase bold">Cost Sharing</strong><br>
-            TOCA Cares will pay 80% (up to $500 per year) of the costs of joining or participating in a charity serving your local community.  This is not a subsity for you giving to a charity; it is a subsity for you participating, such as the cost of joining a Rotary Club, being a Big Brother or Big Sister, or coaching a soccer team for disadvantaged kids.
+            TOCA Cares will pay 80% (up to $1000 per year) of the costs of joining or participating in a charity serving your local community.  This is not a subsity for you giving to a charity; it is a subsity for you participating, such as the cost of joining a Rotary Club, being a Big Brother or Big Sister, or coaching a soccer team for disadvantaged kids.
           </p>
 
           <%= link_to "Apply Now", new_app_form_path, class: "btn btn-primary btn-lg" %>
