--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -10,7 +10,7 @@
 
       <div class="text-center">
         <p style="max-width: 900px; margin: auto"><em>
-          Our lawyers would kill us if we didn’t say that TOCA Cares is new and we will learn as we go along.  Probably some changes will be made, until we get all the kinks worked out.  Also, its a program  run by your fellow employees, doing their best, but there may be some inconsistent results and human mistakes. As far as we know, this hasn’t been done before, so we’re going to refine and improve it as we go. We're excited to see what TOCA Cares can do!
+          Our lawyers would kill us if we didn’t say that TOCA Cares is new and we will learn as we go along.  Probably some changes will be made, until we get all the kinks worked out.  Also, its a program  run by your fellow teammates, doing their best, but there may be some inconsistent results and human mistakes. As far as we know, this hasn’t been done before, so we’re going to refine and improve it as we go. We're excited to see what TOCA Cares can do!
         </em></p>
       </div>
 
@@ -22,13 +22,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q1H">What is the TOCA Cares fund?</h5>
           <p class="color-dark-grey d-startHidden" id ="Q1P">
-            TOCA Cares is the way TOCA employees and shareholders take care of our own.  The community fund is sustained by tax-deductible contributions voluntarily made directly from employees' and shareholders' paychecks.  Any employee can then apply for a grant or loan from the community fund if they are facing an unexpected hardship, want to pursue an educational opportunity (from taking a cooking class to getting your degree), or want to cover costs to participate in charitable work.
+            TOCA Cares is the way TOCA teammates and shareholders take care of our own. The community fund is sustained by tax-deductible contributions voluntarily made directly from teammates' and shareholders' paychecks. Any teammate can then apply for a grant from the community fund if they are facing an unexpected hardship, want to pursue an educational opportunity (that would increase you productivity at TOCA), or want to cover costs to participate in charitable work.
           </p>
         </div> <!-- Grid column -->
       </div> <!-- Grid row -->
@@ -36,13 +36,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q2H">Why was the TOCA Cares fund created?</h5>
           <p class="color-dark-grey" id ="Q2P">
-            Here at TOCA, community is important.  We know that life happens, so we want to make sure our employees have support if they find themselves in an unexpected financial jam.  We want to help our employees keep learning, even though it's sometimes costly to do so.  We want to make sure everyone in the TOCA community gets to experience the joys of giving back.  Community is important, and TOCA Cares is our way of supporting our own.
+            Here at TOCA, community is important.  We know that life happens, so we want to make sure our teammates have support if they find themselves in an unexpected financial jam.  We want to help our teammates keep learning, even though it's sometimes costly to do so.  We want to make sure everyone in the TOCA community gets to experience the joys of giving back.  Community is important, and TOCA Cares is our way of supporting our own.
           </p>
         </div> <!-- Grid column -->
       </div> <!-- Grid row -->
@@ -50,13 +50,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q3H">How do I donate to the fund? </h5>
           <p class="color-dark-grey mb-0" id ="Q3P">
-            You can donate <%= link_to "here", page_path(:contribute) %>.  Any TOCA employees who want to contribute can select any amount they want to donate directly from their paycheck.  (You can update your donation info any time by going to the <%= link_to "contribute", page_path(:contribute) %> section of the TOCA Cares website.)  All contributions go straight to the community fund and are completely tax-deductible.
+            You can donate <%= link_to "here", page_path(:contribute) %>.  Any TOCA teammates who want to contribute can select any amount they want to donate directly from their paycheck.  (You can update your donation info any time by going to the <%= link_to "contribute", page_path(:contribute) %> section of the TOCA Cares website.)  All contributions go straight to the community fund and are completely tax-deductible.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -64,7 +64,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -78,7 +78,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -94,7 +94,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -108,13 +108,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q6H">Is the application anonymous?</h5>
           <p class="color-dark-grey mb-0" id ="Q6P">
-            Your application is completely anonymous to those on the Decision Committee.  Once your application has been approved, your details will be released just to the people who need to know to process the payment.  There are certain exceptions where information in an application will be shared with the employee’s manager on a discrete basis.
+            Your application is completely anonymous to those on the Decision Committee.  Once your application has been approved, your details will be released just to the people who need to know to process the payment.  There are certain exceptions where information in an application will be shared with the teammate’s manager on a discrete basis.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -123,7 +123,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -137,7 +137,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-green"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-yellow"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -152,13 +152,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q10H">Which hardship situations qualify to receive money from the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q10P">
-            The point of the fund is to help employees in serious and unexpected financial situtations. Examples include medical costs, car accidents, home accidents, an airplane ticket for event you can’t miss, funeral expenses, etc. If you’re not sure, it doesn’t hurt to apply. If the situation does not qualify or exceeds the maximum grant amount, you could be offered a small loan.
+            The point of the fund is to help teammates in serious and unexpected financial situations. Examples include medical costs, car accidents, home accidents, funeral expenses, etc. If you’re not sure, it doesn’t hurt to apply. If the situation does not qualify or exceeds the maximum grant amount, you will be given the opportunity to re-apply for a smaller sum.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -168,7 +168,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -184,23 +184,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
-        </div> <!-- Grid column -->
-
-        <div class="col-xl-10 col-md-11 col-10">
-          <h5 class="font-weight-bold mb-3" id="Q12H">Can I take out a loan instead of receiving money?</h5>
-          <p class="color-dark-grey mb-0" id ="Q12P">
-            Of course.  If you’re more comfortable with receiving a loan rather than grant, you can let us know on your application. Also, if the situation exceeds the maximum grant amount, you may be offered a small loan instead of a grant. Loans will be deducted from your paycheck over a period of time.
-          </p>
-        </div> <!-- Grid column -->
-      </div> <!--Grid row-->
-
-
-
-
-      <div class="row mb-3"> <!-- individual question -->
-        <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -216,7 +200,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -232,13 +216,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q15H">Is there a max amount I can receive?</h5>
           <p class="color-dark-grey mb-0" id ="Q15P">
-            In terms of a hardship, typical grant amounts range from $500-$1,500. Depending on the situation (especially if it exceeds this amount), you may also be offered a mixture of a grant and a loan. If your needs drastically exceed our loan amounts, then TOCA may set up an employee crowdfunding platform on your behalf and publicize it to TOCA employees across the nation. Whatever your situation, TOCA is here to help you figure it out.
+            In terms of a hardship, typical grant amounts range from $500-$2,500. If your needs drastically exceed our grant amounts, then TOCA may set up an teammate crowdfunding platform on your behalf and publicize it to TOCA teammates across the nation. Whatever your situation, TOCA is here to help you figure it out.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -247,13 +231,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q16H">How many times can I use the fund?</h5>
           <p class="color-dark-grey mb-0" id ="Q16P">
-            Unless you're obviously abusing the fund, you may apply multiple times. However, after a certain amount of applications, your likelihood of being approved will start to decrease.
+            Unless you're obviously abusing the fund, you may apply multiple times (up to $2500 per year).
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -263,7 +247,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -279,13 +263,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-green"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-yellow"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
-          <h5 class="font-weight-bold mb-3" id="Q18H">Can I apply for the fund on another employee’s behalf?</h5>
+          <h5 class="font-weight-bold mb-3" id="Q18H">Can I apply for the fund on another teammate’s behalf?</h5>
           <p class="color-dark-grey mb-0" id ="Q18P">
-            Yes! If you know one of your coworkers is struggling, you can fill out the application on their behalf.  After the initial application, communications will be between that employee and the Decision Committee.
+            Yes! If you know one of your coworkers is struggling, you can fill out the application on their behalf.  After the initial application, communications will be between that teammate and the Decision Committee.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -295,13 +279,13 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
           <h5 class="font-weight-bold mb-3" id="Q19H">Who makes the decision on my application?</h5>
           <p class="color-dark-grey mb-0" id ="Q19P">
-            A committee of fellow employees will decide on all applications.  Their membership is secret and they are bound to keep information confidential from other employees not on the committee.
+            A TOCA Cares committee will decide on all applications.
           </p>
         </div> <!-- Grid column -->
       </div> <!--Grid row-->
@@ -311,7 +295,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -327,7 +311,7 @@
 
       <div class="row mb-3"> <!-- individual question -->
         <div class="col-1">
-          <p class="h1 color-toca-red"><%= n %><% n += 1 %></p>
+          <p class="h1 color-toca-navy"><%= n %><% n += 1 %></p>
         </div> <!-- Grid column -->
 
         <div class="col-xl-10 col-md-11 col-10">
@@ -349,7 +333,7 @@
       <div class="text-center">
         <h2>Still Have a Question? Ask an admin!</h2>
         <p>
-          We want all TOCA employees to get the most out of TOCA Cares.  If you have any questions, don't hesitate to ask.  An admin will reach out shortly with answers.
+          We want all TOCA teammates to get the most out of TOCA Cares.  If you have any questions, don't hesitate to ask.  An admin will reach out shortly with answers.
         </p>
       </div>
 
