--- a/app/views/scholarships/_form.html.erb
+++ b/app/views/scholarships/_form.html.erb
@@ -19,7 +19,7 @@
 
 
 
-  <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Personal Information</p>
+  <p class="h4 mb-0 color-toca-navy toca-uppercase">Part I:  Personal Information</p>
   <p><small>This information is anonymous and will not be seen by the deciding committee.</small></p>
 
   <div class="field">
@@ -93,7 +93,7 @@
   </div>
 
 
-  <p class="h4 mb-0 mt-5 color-toca-red toca-uppercase">Part II:  Scholarship Information</p>
+  <p class="h4 mb-0 mt-5 color-toca-navy toca-uppercase">Part II:  Scholarship Information</p>
   <p><small>This information is not anonymous and will be seen by the deciding committee.</small></p>
 
   <div class="row">
@@ -122,11 +122,11 @@
   </div>
 
 
-  <p class="h4 mb-3 mt-5 color-toca-red toca-uppercase">Part III:  Statements</p>
+  <p class="h4 mb-3 mt-5 color-toca-navy toca-uppercase">Part III:  Statements</p>
 
   <h5 class="mb-0 toca-uppercase">Statement of Intent</h5>
   <small>
-    I agree that all of the information provided in this application is truthful and reflects a genuine financial hardship. In no way am I attempting to take advantage of TOCA Cares, nor my fellow employees, as this is a community fund. If it appears that I have, serious actions will be taken, jeopardizing my job at TOCA and future access to the community fund.
+    I agree that all of the information provided in this application is truthful and reflects a genuine financial hardship. In no way am I attempting to take advantage of TOCA Cares, nor my fellow teammates, as this is a community fund. If it appears that I have, serious actions will be taken, jeopardizing my job at TOCA and future access to the community fund.
   </small>
 
   <div class="row mt-2">
