--- a/app/views/app_forms/show.html.erb
+++ b/app/views/app_forms/show.html.erb
@@ -1,7 +1,7 @@
 <main class="pb-5 container-fluid px-5" id="app-form-show">
 
   <header class="text-right py-3">
-    <%= link_to "Back to Application Manager", app_forms_path, class: "color-toca-red" %>
+    <%= link_to "Back to Application Manager", app_forms_path, class: "color-toca-navy" %>
   </header>
 
 
@@ -34,7 +34,7 @@
           <!-- EXISTING MESSAGES  -->
           <% if @messages.count > 0 %>
             <hr>
-            <h3 class="toca-uppercase color-toca-red mb-0">Existing Messages</h3>
+            <h3 class="toca-uppercase color-toca-navy mb-0">Existing Messages</h3>
             <p class="mb-2"><small>Click a message to see the conversation thread.</small></p>
             <ul>
               <% @messages.each do |message| %>
@@ -63,7 +63,7 @@
         </div>
         <div class="bg-white p-3">
           <div class="row">
-            <div class="col-12 text-center toca-uppercase color-toca-red">
+            <div class="col-12 text-center toca-uppercase color-toca-navy">
               <h3>
                 <% if @app_form.approved %>Approved&nbsp;&nbsp;|&nbsp;&nbsp;<% end %>
                 <% if @app_form.denied %>Denied&nbsp;&nbsp;|&nbsp;&nbsp;<% end %>
@@ -122,7 +122,7 @@
           <section id="application-info" class="z-depth-3 my-4">
             <div class="bg-toca-red color-white pb-3 py-3 text-center">
               <h2 class="toca-uppercase m-0 p-0">Recipient Information</h2>
-              <p class="m-0 p-0">This application was submitted by one employee on the behalf of another.</p>
+              <p class="m-0 p-0">This application was submitted by one teammate on the behalf of another.</p>
             </div>
             <div class="bg-white p-3">
               <div class="row">
@@ -215,7 +215,7 @@
 
             <div class="col-12">
               <% if @seconded_vote && @seconded_vote.modifications_accepted_by_applicant %>
-                <h3 class="color-toca-red toca-uppercase">Modifications (Agreed to by Applicant):</h3>
+                <h3 class="color-toca-navy toca-uppercase">Modifications (Agreed to by Applicant):</h3>
                 <p><strong><%= @seconded_vote.modification %></strong></p>
                 <% if @seconded_vote.suggest_loan %><p><strong>Loan Suggested:  </strong><%= @seconded_vote.describe_loan %><% end %>
               <% end %>
@@ -250,7 +250,7 @@
                   This application has not been decided on yet.
                 <% elsif @app_form.application_status_id == 4 %>
 
-                  <h3 class="color-toca-red toca-uppercase">Requested Changes</h3>
+                  <h3 class="color-toca-navy toca-uppercase">Requested Changes</h3>
                   <% @votes.each do |v| %>
                     <p><strong><%= v.modification %></strong></p>
                     <% if v.suggest_loan %><p><strong>Loan Suggested:  </strong><%= v.describe_loan %><% end %>
@@ -265,7 +265,7 @@
                 <% elsif @app_form.application_status_id == 5 %>
                   This application has been <%= FinalDecision.find(@app_form.final_decision_id).status.downcase %>.
                   <% if @seconded_vote && @seconded_vote.modifications_accepted_by_applicant %>
-                    <h3 class="color-toca-red toca-uppercase">Modifications (Agreed to by Applicant):</h3>
+                    <h3 class="color-toca-navy toca-uppercase">Modifications (Agreed to by Applicant):</h3>
                     <p><strong><%= @seconded_vote.modification %></strong></p>
                     <% if @seconded_vote.suggest_loan %><p><strong>Loan Suggested:  </strong><%= @seconded_vote.describe_loan %><% end %>
                   <% end %>
@@ -276,7 +276,7 @@
 
               <% elsif @app_form.application_status_id == 4 %> <!-- Returned with Modifications -->
 
-                  <h3 class="toca-uppercase color-toca-red">Returned with Changes</h3>
+                  <h3 class="toca-uppercase color-toca-navy">Returned with Changes</h3>
                   <p class="color-dark-grey">
                     This application has been returned to the applicant with the following suggested modifications:
                   </p>
@@ -290,7 +290,7 @@
 
               <% elsif @app_form.application_status_id == 5 %> <!-- Decision Reached -->
 
-                <h3 class="toca-uppercase color-toca-red">Application Decision</h3>
+                <h3 class="toca-uppercase color-toca-navy">Application Decision</h3>
                 <p class="color-dark-grey">
                   <%= FinalDecision.find(@app_form.final_decision_id).status %>
                 </p>
@@ -307,7 +307,7 @@
               <% end %>
 
                 <% if @votes.count > 0 %>
-                  <h3 class="toca-uppercase color-toca-red">Existing Votes</h3>
+                  <h3 class="toca-uppercase color-toca-navy">Existing Votes</h3>
                   <p class="color-dark-grey">
                     Seconding a proposed vote will remove this application from consideration and send it back to the applicant for revision.
                   </p>
