--- a/app/views/hardship_mailer/by_other_hardship_accepted_email.html.erb
+++ b/app/views/hardship_mailer/by_other_hardship_accepted_email.html.erb
@@ -13,7 +13,7 @@
       Dear <%= @application.full_name %>,
     </p>
     <p>
-      As you may or may not be aware, another employee has submitted a TOCA Cares hardship application on your behalf. We are delighted to inform you that the hardship application has been approved! TOCA Cares is about assisting valuable employees like you, so we hope you accept our humble offer to help through our completely confidential process.
+      As you may or may not be aware, another teammate has submitted a TOCA Cares hardship application on your behalf. We are delighted to inform you that the hardship application has been approved! TOCA Cares is about assisting valuable teammates like you, so we hope you accept our humble offer to help through our completely confidential process.
     </p>
     <p>
       You have been awarded a grant for <strong><%= number_to_currency(@application.requested_amount, unit: "$") %></strong> for the following hardship:
