--- a/app/views/hardship_mailer/for_other_hardship_denied_email.html.erb
+++ b/app/views/hardship_mailer/for_other_hardship_denied_email.html.erb
@@ -10,7 +10,7 @@
     <h1 style="text-align: center">The TOCA Cares Hardship Application You Submitted for <%= @application.full_name %> Has Been Denied</h1>
     <hr style="border: 0; border-top: solid 2px #EB0029; margin-bottom: 25px" />
     <p>
-      Dear Employee,
+      Dear Teammate,
     </p>
     <p>
       After careful consideration, we regret to inform you that we are not able to financially assist <%= @application.full_name %> in the situation for which you submitted an application.
