--- a/app/views/hardship_mailer/hardship_accepted_email.html.erb
+++ b/app/views/hardship_mailer/hardship_accepted_email.html.erb
@@ -31,7 +31,7 @@
     <% end %>
 
     <p>
-      You will soon be contacted by our partnering organization, Helping Hands, who will reach out to you and request additional information about your financial situation to verify you receive the appropriate amount from TOCA Cares. Once verified, Helping Hands will pay your bill directly in a confidential and secure process. Please keep in mind that your response time to Helping Hands’ inquiries will determine the speed of the process. TOCA Cares is glad we can help valued employees like you.
+      You will soon be contacted by our partnering organization, Helping Hands, who will reach out to you and request additional information about your financial situation to verify you receive the appropriate amount from TOCA Cares. Once verified, Helping Hands will pay your bill directly in a confidential and secure process. Please keep in mind that your response time to Helping Hands’ inquiries will determine the speed of the process. TOCA Cares is glad we can help valued teammates like you.
     </p>
     <p>
       Sincerely,
