--- a/app/views/hardships/_form.html.erb
+++ b/app/views/hardships/_form.html.erb
@@ -16,7 +16,7 @@
     </div>
 
 
-  <p class="h4 mb-0 color-toca-red toca-uppercase">Part I:  Personal Information</p>
+  <p class="h4 mb-0 color-toca-navy toca-uppercase">Part I:  Personal Information</p>
   <p><small>This section is for the personal information for the person undergoing the hardship.  Information in this section is anonymous and will not be seen by the deciding committee.</small></p>
 
   <div class="field mb-2">
@@ -88,7 +88,7 @@
 
   <hr class="mb-4">
 
-  <p class="h4 mb-0 mt-5 color-toca-red toca-uppercase">Part II:  Hardship Information</p>
+  <p class="h4 mb-0 mt-5 color-toca-navy toca-uppercase">Part II:  Hardship Information</p>
   <p><small>This information is not anonymous and will be seen by the deciding committee.</small></p>
 
   <div class="row">
@@ -112,7 +112,7 @@
     </div>
   </div> <!-- row -->
 
-    <h5 class="mb-0 toca-uppercase color-toca-red">Hardship Category</h5>
+    <h5 class="mb-0 toca-uppercase color-toca-navy">Hardship Category</h5>
     <small>Select as many as apply.</small>
 
     <div class="row">
@@ -167,7 +167,7 @@
     </div> <!-- row -->
 
   <div class="field">
-    <h5 class="mb-3 toca-uppercase color-toca-red">Hardship Description</h5>
+    <h5 class="mb-3 toca-uppercase color-toca-navy">Hardship Description</h5>
     <%= form.text_area :hardship_description, class: "form-control mb-4", placeholder: "Please describe your hardship", required: true %>
   </div>
 
@@ -192,11 +192,11 @@
 
   <hr class="mt-5 mb-4">
 
-  <p class="h4 mb-3 color-toca-red toca-uppercase">Part III:  Statements</p>
+  <p class="h4 mb-3 color-toca-navy toca-uppercase">Part III:  Statements</p>
 
   <h5 class="mb-0 toca-uppercase">Statement of Intent</h5>
   <small>
-    I agree that all of the information provided in this application is truthful and reflects a genuine financial hardship. In no way am I attempting to take advantage of TOCA Cares, nor my fellow employees, as this is a community fund. If it appears that I have, serious actions will be taken, jeopardizing my job at TOCA and future access to the community fund.
+    I agree that all of the information provided in this application is truthful and reflects a genuine financial hardship. In no way am I attempting to take advantage of TOCA Cares, nor my fellow teammates, as this is a community fund. If it appears that I have, serious actions will be taken, jeopardizing my job at TOCA and future access to the community fund.
   </small>
 
   <div class="row mt-2">
