--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,14 +18,14 @@
     <div class="py-4 color-black">
       <span style="font-weight: 700">
         <% if current_user %>
-          <%= link_to "My TOCA Cares Account", user_path(current_user) %>
+          <%= link_to "My TOCA Cares Account", user_path(current_user), class: "color-black" %>
         <% else %>
-          <%= link_to "Create a New Account", new_user_registration_path %>
+          <%= link_to "Create a New Account", new_user_registration_path, class: "color-black" %>
           &nbsp;&nbsp;|&nbsp;&nbsp;
-          <%= link_to "Login to My Account", new_user_session_path %>
+          <%= link_to "Login to My Account", new_user_session_path, class: "color-black" %>
         <% end %>
         &nbsp;&nbsp;|&nbsp;&nbsp;
-        <a href="https://tocafootball.com/" target="_blank">TOCA&nbsp;Football</a>
+        <a href="https://tocafootball.com/" target="_blank" class="color-black">TOCA&nbsp;Football</a>
       </span>
     </div>
 
