--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -52,11 +52,12 @@
               Click the red button below to authorize an automatic payment (which is a charitable gift) from your paycheck to TOCA Cares.
             </h5>
             <div style="width: 100%; padding: 0 15px;">
-              <%= link_to "Contribute from My Paycheck", asset_path("Insperity-Payroll-Deductions-Form.pdf"), download: "Insperity Payroll Deductions Form.pdf", class: "btn btn-primary btn-block my-3" %>
-              <%= link_to "Contribute from My Paycheck (TOCA&nbsp;Impact&nbsp;Employee)".html_safe, asset_path("Payroll Deduction Form.docx"), download: "Payroll Deduction Form.docx", class: "btn btn-primary btn-block my-3" %>
+              <a href="https://tocacares.s3.us-west-1.amazonaws.com/TS++Withholding+Authorization+Form.pdf" target="_blank" class="btn btn-primary btn-block my-3">Contribute from My Paycheck</a>
+              <%#= link_to "Contribute from My Paycheck", asset_path("Insperity-Payroll-Deductions-Form.pdf"), download: "Insperity Payroll Deductions Form.pdf", class: "btn btn-primary btn-block my-3" %>
+              <%#= link_to "Contribute from My Paycheck (TOCA&nbsp;Impact&nbsp;Employee)".html_safe, asset_path("Payroll Deduction Form.docx"), download: "Payroll Deduction Form.docx", class: "btn btn-primary btn-block my-3" %>
             </div>
             <h5 class="text-center dark-grey-text w-responsive mx-auto">
-              Please email your completed form to <%= mail_to "aadams@tocafootball.com", "aadams@tocafootball.com", target: "_blank", class: "color-toca-navy" %>.
+              Please email your completed form to <%= mail_to "payroll@tocafootball.com", "payroll@tocafootball.com", target: "_blank", class: "color-toca-navy" %>.
             </h5>
           </section>
         </div> <!-- col -->
